# webwatch

./: .coderabbit.yaml  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  facts.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: documentation-reviewer.md
.claude/commands/: pre-pr-check.md
.claude/skills/branch/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: AGENTS.src.md  Architecture.md  Checks.md  Extraction.md  Facts.md  Operations.md  Project_Structure.md  Python.md  README.md  Testing.md
docs/plans/: README.md  expired-events-check.md  periodic-digest.md  phase-b-core-architecture.md  phase-c-first-check.md  phase-d-rules-engine.md  phase-e-notifications.md  visit-page-hours-source.md
scripts/: capture_fixture.py
tests/: conftest.py  test_checks.py  test_cli.py  test_events.py  test_expiry.py  test_extract_anchors.py  test_extract_structured.py  test_facts.py  test_fetch.py  test_normalize.py  test_notify.py  test_registry.py  test_report.py  test_result.py  test_rules.py  test_run.py  test_run_e2e.py  test_sources.py  test_state.py  test_theflip_museum.py  test_theflip_museum_visit.py
tests/fixtures/: theflip_museum_2026-06-23.html  theflip_museum_2026-06-24.html  theflip_museum_visit_2026-06-23.html  theflip_museum_visit_2026-06-24.html
webwatch/: __init__.py  __main__.py  cli.py  config.py  events.py  expiry.py  facts.py  fetch.py  normalize.py  report.py  result.py  rules.py  run.py  state.py
webwatch/checks/: base.py  registry.py
webwatch/extract/: __init__.py  anchors.py  structured.py
webwatch/notify/: email.py
webwatch/sources/: __init__.py  base.py  registry.py  theflip_museum.py  theflip_museum_visit.py
